--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "tslib": "^2.3.1",
     "typescript": "~4.6.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@doist/todoist-api-typescript": "^1.5.0"
+  }
 }
